ajout nav et lien

--- a/index.html
+++ b/index.html
@@ -2,34 +2,11 @@
 <html lang="fr" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Deicides</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
   <div class="container-fluid">
     <div class="row">
       <div class="col">
@@ -37,7 +14,45 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <nav>
+    <div class="navBar nav-wrapper">
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul id="nav-fixed" class="left hide-on-med-and-down">
+            <li><a class="btn" href="">accueil</a></li>
+            <li><a class="btn" href="">LokiTheknigh</a></li>
+            <li><a class="btn" href="">Devil-Boy</a></li>
+            <li><a class="btn" href="">Video</a></li>
+            <li> <a class='dropdown-button btn' href='#' data-activates='dropdown1'>ky</a></li>
+        </ul>
+        <ul id='dropdown2' class='dropdown-content'>
+            <li><a href="">hy</a></li>
+            <li><a href="">yh</a></li>
+            <li><a href="">hy</a></li>
+            <li><a href="">hy</a></li>
+        </ul>
+        <ul id='dropdown1' class='dropdown-content'>
+            <li><a href="">hy</a></li>
+            <li><a href="">yhy</a></li>
+            <li><a href="">hy</a></li>
+            <li><a href="">hy</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href="">hy</a></li>
+            <li><a href="">hy</a></li>
+            <li><a href="">hy</a></li>
+            <li><a class='dropdown-button btn' href='#' data-activates='dropdown2'>ky</a></li>
+        </ul>
+    </div>
+</nav>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
