--- a/index.html
+++ b/index.html
@@ -6,53 +6,221 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Deicides</title>
 </head>
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-
-      </div>
-    </div>
+<body class="">
+  <div id="text">
+    <h1>Deicides</h1>
   </div>
   <nav>
     <div class="navBar nav-wrapper">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul id="nav-fixed" class="left hide-on-med-and-down">
-            <li><a class="btn" href="">accueil</a></li>
-            <li><a class="btn" href="">LokiTheknigh</a></li>
-            <li><a class="btn" href="">Devil-Boy</a></li>
-            <li><a class="btn" href="">Video</a></li>
-            <li> <a class='dropdown-button btn' href='#' data-activates='dropdown1'>ky</a></li>
-        </ul>
-        <ul id='dropdown2' class='dropdown-content'>
-            <li><a href="">hy</a></li>
-            <li><a href="">yh</a></li>
-            <li><a href="">hy</a></li>
-            <li><a href="">hy</a></li>
-        </ul>
-        <ul id='dropdown1' class='dropdown-content'>
-            <li><a href="">hy</a></li>
-            <li><a href="">yhy</a></li>
-            <li><a href="">hy</a></li>
-            <li><a href="">hy</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-            <li><a href="">hy</a></li>
-            <li><a href="">hy</a></li>
-            <li><a href="">hy</a></li>
-            <li><a class='dropdown-button btn' href='#' data-activates='dropdown2'>ky</a></li>
-        </ul>
+      <ul id="nav-fixed" class="left hide-on-med-and-down">
+        <li><a class="btn" href="index.html">accueil</a></li>
+        <li><a class="btn" href="event.html">Event</a></li>
+        <li><a class="btn" href="royaume.html">Royaume</a></li>
+        <li><a class="btn" href="dieux.html">Dieux</a></li>
+        <li> <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Personnages</a></li>
+      </ul>
+      <ul id='dropdown2' class='dropdown-content'>
+        <li><a href="succube.html">La Succube Féministe</a></li>
+        <li><a href="viking.html">Le Viking Imberbe</a></li>
+        <li><a href="oni.html">L'Oni Hémophilemain</a></li>
+        <li><a href="momie.html">La Momie Incromprise</a></li>
+      </ul>
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="succube.html">La Succube Feministe</a></li>
+        <li><a href="viking.html">Le Viking Imberbe</a></li>
+        <li><a href="oni.html">L'Oni Hémophilemain</a></li>
+        <li><a href="momie.html">La Momie Incromprise</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="index.html">accueil</a></li>
+        <li><a href="event.html">Event</a></li>
+        <li><a href="royaume.html">Royaume</a></li>
+        <li><a href="dieux.html">Dieux</a></li>
+        <li><a class='dropdown-button btn' href='#' data-activates='dropdown2'>Personnages</a></li>
+      </ul>
     </div>
-</nav>
+  </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col">
-
+  <div class="col s12 m8">
+    <div class="video-container">
+      <video class="responsive-video" controls>
+        <source src="assets/img/" type="video/mp4">
+        </video>
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script type="text/javascript" src="assets/js/script.js"></script>
-</body>
-</html>
+</div>
+    <h2 id="text">Les Fichie Des Personnages</h2>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col s12 m3">
+          <div class="card1">
+            <div class="card-content">
+              <p>La Succube Féministe</p>
+            </div>
+            <div class="card-action">
+              <a href="succube.html">La Succube Feministe</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card1">
+            <div class="card-content">
+              <p>Le Viking Imberbe</p>
+            </div>
+            <div class="card-action">
+              <a href="viking.html">Le Viking Imberbe</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card1">
+            <div class="card-content">
+              <p>L'Oni Hémophilemain</p>
+            </div>
+            <div class="card-action">
+              <a href="oni.html">L'Oni Hémophilemain</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card1">
+            <div class="card-content">
+              <p>La Momie Incromprise</p>
+            </div>
+            <div class="card-action">
+              <a href="momie.html">La Momie Incromprise</a>
+            </div>
+          </div>
+        </div>
+        <h2 id="text">Royaume</h2>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Helheim</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Helheim</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Muspulheim</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Muspulheim</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Svartalfheim</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Svartalfheim</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Midgard</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Midgard</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Nidavellir</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Nidavellir</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card2">
+            <div class="card-content">
+              <p>Jotunheim</p>
+            </div>
+            <div class="card-action">
+              <a href="royaume.html">Jotunheim</a>
+            </div>
+          </div>
+        </div>
+        <h2 id="text">Dieux</h2>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>helya</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">helya</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>odin</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">odin</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>surt</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">surt</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>freyr</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">freyr</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>frygg</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">frygg</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m2">
+          <div class="card3">
+            <div class="card-content">
+              <p>mimir</p>
+            </div>
+            <div class="card-action">
+              <a href="dieux.html">mimir</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
+  </body>
+  </html>
