--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-  <div class="col s12 m8">
-    <div class="video-container">
-      <video class="responsive-video" controls>
-        <source src="assets/img/" type="video/mp4">
-        </video>
+      <div class="col s12 m8">
+        <div class="video-container">
+          <video class="responsive-video" controls>
+            <source src="assets/img/video.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
     <h2 id="text">Les Fichie Des Personnages</h2>
     <div class="container-fluid">
       <div class="row">
